# safe-resource-packer

./: .gitignore  BATCH_REPACKING_FEATURE.md  BEAUTIFUL_DEBUG_LOGGING.md  BSA_BA2_SOLUTION.md  BSA_CHUNKING_IMPLEMENTATION.md  BUILD.md  BUNDLED_ONLY_BUILD_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLEAN_PACKAGING_SYSTEM.md  COMPLETE_TRANSFORMATION_SUMMARY.md  COMPRESSION_FIXES.md  CONSOLE_UI_ENHANCEMENTS.md  DEBUG_TABLE_FIXES.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_FIXES_SUMMARY.md  DOCUMENTATION_VALIDATION_COMPLETE.md  DYNAMIC_FOLDER_ANALYSIS.md  DYNAMIC_PROGRESS_IMPLEMENTATION.md  EDGE_CASES_FIXED.md  EDGE_CASE_FIXES_v2.md  FLEXIBLE_CONFIGURATION_SYSTEM.md  MO2_ADAPTATION_SUMMARY.md  NEXUS_SECURITY_BRIEF.md  NEXUS_SUBMISSION_SECURITY.md  NOOB_FRIENDLY_IMPLEMENTATION_SUMMARY.md  PATH_GUIDANCE_IMPROVEMENTS.md  PHILOSOPHY.md  README.md  README_SECURITY.txt  RICH_INTEGRATION_STATUS.md  SECURITY_VERIFICATION.md  SIMPLIFICATION_PLAN.md  SIMPLIFIED_BATCH_REPACKER.md  Safe_Resource_Packer.sh  TABLE_DEBUG_VIEW.md  TRANSFORMATION_COMPLETE.md  WARP.md  WINDOWS_LAUNCHER_IMPLEMENTATION.md  WINDOWS_LAUNCHER_README.md  (+14 more)
configs/: batch_repacker_default.json  bodyslide.json  fallout3.json  fallout4.json  game_data_structure.json  oblivion.json  skyrim.json
docs/: API.md  Build_Guide.md  CLI_Reference.md  Console_UI_Guide.md  Contributing.md  DOCUMENTATION_INDEX.md  Debug_Status_Guide.md  FAQ.md  Getting_Started.md  Home.md  Installation.md  MO2_Integration_Guide.md  NEXUS_BRIEF_DESCRIPTION.txt  NEXUS_DESCRIPTION_BBCODE.txt  NEXUS_DOCUMENTATION.txt  Packaging_Features.md  Packaging_Guide.md  Technical_Deep_Dive.md  USAGE.md  Usage_Guide.md  Windows_Launcher_Guide.md  _Sidebar.md  _config.yml  index.md
examples/: basic_usage.py  batch_repacker_chunking_demo.py  batch_repacker_config.py  batch_repacking_demo.py  beautiful_debug_demo.py  bsa_chunking_demo.py  bulletproof_game_scanner_test.py  case_insensitive_fix_demo.py  classifier_data_structure_test.py  clean_output_demo.py  complete_packaging_demo.py  comprehensive_logging_integration_example.py  compression_improvements_demo.py  config_example.py  console_ui_demo.py  data_integrity_test.py  data_structure_test.py  (+12 more)
(+73 files in other folders)
