[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-resource-packer"
version = "1.0.0"
authors = [
    {name = "Dudu"},
]
description = "A secure and efficient resource packing utility for embedding files into executables"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["resource packing", "file management", "skyrim modding", "game modding", "file classification"]
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "colorama>=0.4.4",
    # "py7zr>=0.20.0"  # removed - using 7z CLI only for reliability
]

[project.urls]
Homepage = "https://github.com/yourusername/safe-resource-packer"
"Bug Tracker" = "https://github.com/yourusername/safe-resource-packer/issues"
Documentation = "https://github.com/yourusername/safe-resource-packer/blob/main/docs/"
"Source Code" = "https://github.com/yourusername/safe-resource-packer"

[project.scripts]
safe-resource-packer = "safe_resource_packer.enhanced_cli:enhanced_main"
srp = "safe_resource_packer.enhanced_cli:enhanced_main"
safe-resource-packer-basic = "safe_resource_packer.cli:basic_main"
safe-resource-packer-ui = "safe_resource_packer.console_ui:run_console_ui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
